# Python_Tools

./: .gitignore  BASE_REQUIREMENTS.yaml  D_Python_Workbook.ipynb  Daily Workbook.ipynb  Examples Code.ipynb  Functions to Store Somewhere else..ipynb  GeneralKnowledge.ipynb  ML_Project_Presentation.md  ReadMe.md  Untitled.ipynb
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Daily Workbook-checkpoint.ipynb  GeneralKnowledge-checkpoint.ipynb  Visualizations-checkpoint.ipynb
CSV Backup Files/: CodingDDashboard_Apr-25.csv  CodingDDashboard_Jun-25.csv  CodingDDashboard_Mar-25.csv  CodingDDashboard_May-25.csv  CodingDDashboard_Sep-25.csv  DataDashboardSheet_Apr-25.csv  DataDashboardSheet_Jun-25.csv  DataDashboardSheet_Mar-25.csv  DataDashboardSheet_May-25.csv  DataDashboardSheet_Oct-25.csv  DataDashboardSheet_Sep-25.csv  Definitions.csv  Definitions_Jan-26.csv  ML_Pipeline_Mar-25.csv  Mapping Sheet_Apr-25.csv  Mapping Sheet_Jun-25.csv  Mapping Sheet_Mar-25.csv  Mapping Sheet_Oct-25.csv  Notes.csv  Notes_Apr-25.csv  Notes_Jan-26.csv  Notes_Jun-25.csv  Notes_Mar-25.csv  Notes_Oct-25.csv  Notes_Sep-25.csv  ProcessSheet_Apr-25.csv  ProcessSheet_Mar-25.csv  ProcessSheet_May-25.csv  ProcessSheet_Oct-25.csv  ProcessSheet_Sep-25.csv  Processes_Jan-26.csv  SKLearn Models_Mar-25.csv  SKlearn Model Parameters_May-25.csv  Sklearn Models_Jun-25.csv  Technical Notes_Jan-26.csv  d_daily_test_score.csv  daily_processes.py  function_list_url.csv  google_daily_activities.csv  google_definition_csv.csv  (+6 more)
Project Folder/test/: Untitled.ipynb  pyproject.toml  untitled.chat
(+2325 files in other folders)
